--- a/index.html
+++ b/index.html
@@ -27,18 +27,43 @@
                         <li><a href="#"></a></li>
                         <li><a href="inline-block/index.html">INLINE-BLOCK</a></li>
                         <li><a href="table/table/index.html">TABLE</a></li>
-                        <li style="position: relative;"><a href="#">SITE</a>
-                            <ul class="second_1-ul" style="position: absolute; left: -183px; top: 0;">
-                                <li><a href="amelia/index.html" target="_blank">AMELIA</a></li>
+                        <li class="li2"><a href="#">SITE</a>
+                            <ul class="second_1-ul">
+                                <li class="li3"><a href="amelia/index.html" target="_blank">AMELIA</a></li>
                             </ul>
                         </li>
                     </ul>
-
                 </li>
-
             </ul>
         </div>
     </header>
+    <footer>
+        <div class="FooterContainer">
+            <ul class="list_svg">
+                <li>
+                    <a href="#">
+                        <svg class="icon_svg">
+                            <use href="./img/sprite.svg#instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <svg class="icon_svg">
+                            <use href="./img/sprite.svg#telegram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <svg class="icon_svg">
+                            <use href="./img/sprite.svg#facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </footer>
 </body>
 
 </html>
