--- a/gallery/index.html
+++ b/gallery/index.html
@@ -13,23 +13,23 @@
     <header class="header">
         <div class="container">
             <ul class="menu">
-                <li>
-                    <a href="../index.html">HOME</a>
+                <li style="font-family: 'Tilt Prism';">
+                    <a href="#">HOME</a>
                 </li>
-                <li>
-                    <a href="../gallery/index.html">GALLERY</a>
+                <li style="font-family: Smokum-Regular;">
+                    <a href="gallery/index.html">GALLERY</a>
                 </li>
 
-                <li>
+                <li style="font-family: Merriweather-Black;">
                     <a href="#">HOMEWORKS</a>
 
                     <ul class="second-ul">
                         <li><a href="#"></a></li>
-                        <li><a href="../inline-block/index.html">INLINE-BLOCK</a></li>
-                        <li><a href="../table/table/index.html">TABLE</a></li>
-                        <li style="position: relative;"><a href="#">SITE</a>
-                            <ul class="second_1-ul" style="position: absolute; left: -183px; top: 0;">
-                                <li><a href="../amelia/index.html" target="_blank">AMELIA</a></li>
+                        <li><a href="inline-block/index.html">INLINE-BLOCK</a></li>
+                        <li><a href="table/table/index.html">TABLE</a></li>
+                        <li class="li2"><a href="#">SITE</a>
+                            <ul class="second_1-ul">
+                                <li class="li3"><a href="amelia/index.html" target="_blank">AMELIA</a></li>
                             </ul>
                         </li>
                     </ul>
