--- a/index.html
+++ b/index.html
@@ -13,16 +13,28 @@
     <header class="header">
         <div class="container">
             <ul class="menu">
-                <li style="font-family: 'Tilt Prism';">
-                    <a href="#">HOME</a>
+                <li>
+                    <a> <svg>
+                            <use href="./img/sprite.svg#home"></use>
+                        </svg>
+                        <a href="#" class="icon_link">HOME</a>
+                    </a>
                 </li>
-                <li style="font-family: Smokum-Regular;">
-                    <a href="gallery/index.html">GALLERY</a>
+                <li>
+                    <a>
+                        <svg class="header_icon">
+                            <use href="./img/sprite.svg#gallery"></use>
+                        </svg>
+                        <a href="gallery/index.html" class="icon_link">GALLERY</a>
+                    </a>
                 </li>
-
-                <li style="font-family: Merriweather-Black;">
-                    <a href="#">HOMEWORKS</a>
-
+                <li>
+                    <a>
+                        <svg class="header_icon">
+                            <use href="./img/sprite.svg#arrow-right"></use>
+                        </svg>
+                        <a href="#" class="icon_link">HOMEWORKS</a>
+                    </a>
                     <ul class="second-ul">
                         <li><a href="#"></a></li>
                         <li><a href="inline-block/index.html">INLINE-BLOCK</a></li>
