--- a/index.html
+++ b/index.html
@@ -14,32 +14,38 @@
         <div class="container">
             <ul class="menu">
                 <li>
-                    <a> <svg>
+                    <a href="#"> <svg class="header_icon">
                             <use href="./img/sprite.svg#home"></use>
                         </svg>
-                        <a href="#" class="icon_link">HOME</a>
                     </a>
+                    <a href="#" class="icon_link">HOME</a>
+
                 </li>
                 <li>
-                    <a>
+                    <a href="./gallery/index.html">
                         <svg class="header_icon">
                             <use href="./img/sprite.svg#gallery"></use>
-                        </svg>
-                        <a href="gallery/index.html" class="icon_link">GALLERY</a>
-                    </a>
+                        </svg></a>
+                    <a href="gallery/index.html" class="icon_link">GALLERY</a>
+
                 </li>
                 <li>
-                    <a>
-                        <svg class="header_icon">
+                    <a href="#">
+                        <svg class="header-icon-right">
                             <use href="./img/sprite.svg#arrow-right"></use>
                         </svg>
-                        <a href="#" class="icon_link">HOMEWORKS</a>
                     </a>
+                    <a href="#" class="icon_link">HOMEWORKS</a>
+
                     <ul class="second-ul">
-                        <li><a href="#"></a></li>
+
                         <li><a href="inline-block/index.html">INLINE-BLOCK</a></li>
                         <li><a href="table/table/index.html">TABLE</a></li>
-                        <li class="li2"><a href="#">SITE</a>
+                        <li class="li2">
+                        <li><a href="#">SITE</a>
+                            <svg class="header_icon header_icon_arrow">
+                                <use href="./img/sprite.svg#arrow-left"></use>
+                            </svg>
                             <ul class="second_1-ul">
                                 <li class="li3"><a href="amelia/index.html" target="_blank">AMELIA</a></li>
                             </ul>
