--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <li><a href="inline-block/index.html">INLINE-BLOCK</a></li>
                         <li><a href="table/table/index.html">TABLE</a></li>
                         <li class="li2">
-                        <li><a href="#">SITE</a>
+                            <a href="#">SITE</a>
                             <svg class="header_icon header_icon_arrow">
                                 <use href="./img/sprite.svg#arrow-left"></use>
                             </svg>
