--- a/index.html
+++ b/index.html
@@ -14,38 +14,33 @@
         <div class="container">
             <ul class="menu">
                 <li>
-                    <a href="#"> <svg class="header_icon">
+
+                    <a href="#" class="icon_link"><svg class="header_icon">
                             <use href="./img/sprite.svg#home"></use>
                         </svg>
-                    </a>
-                    <a href="#" class="icon_link">HOME</a>
-
+                        HOME</a>
                 </li>
                 <li>
-                    <a href="./gallery/index.html">
-                        <svg class="header_icon">
+                    <a href="gallery/index.html" class="icon_link"><svg class="header_icon">
                             <use href="./img/sprite.svg#gallery"></use>
-                        </svg></a>
-                    <a href="gallery/index.html" class="icon_link">GALLERY</a>
-
+                        </svg>
+                        GALLERY</a>
                 </li>
                 <li>
-                    <a href="#">
-                        <svg class="header-icon-right">
+                    <a href="#" class="icon_link"><svg class="header-icon-right">
                             <use href="./img/sprite.svg#arrow-right"></use>
                         </svg>
-                    </a>
-                    <a href="#" class="icon_link">HOMEWORKS</a>
+                        HOMEWORKS</a>
 
                     <ul class="second-ul">
 
                         <li><a href="inline-block/index.html">INLINE-BLOCK</a></li>
                         <li><a href="table/table/index.html">TABLE</a></li>
                         <li class="li2">
-                            <a href="#">SITE</a>
-                            <svg class="header_icon header_icon_arrow">
-                                <use href="./img/sprite.svg#arrow-left"></use>
-                            </svg>
+                            <a href="#"> <svg class="header_icon header_icon_arrow">
+                                    <use href="./img/sprite.svg#arrow-left"></use>
+                                </svg>SITE</a>
+
                             <ul class="second_1-ul">
                                 <li class="li3"><a href="amelia/index.html" target="_blank">AMELIA</a></li>
                             </ul>
