--- a/index.html
+++ b/index.html
@@ -50,7 +50,29 @@
             </ul>
         </div>
     </header>
-    <footer>
+    <div class="hover_me">
+        <div class="hover_me_klik"><span>
+                HOVER ME </span>
+        </div>
+        <ul class="hover_svg">
+            <li><a href="#"><svg class="icon_svg">
+                        <use href="./img/sprite.svg#instagram"></use>
+                    </svg></a></li>
+            <li><a href="#"><svg class="icon_svg">
+                        <use href="./img/sprite.svg#telegram"></use>
+                    </svg></a></li>
+            <li><a href="#"><svg class="icon_svg">
+                        <use href="./img/sprite.svg#facebook"></use>
+                    </svg></a></li>
+            <li><a href="#"><svg class="icon_svg">
+
+                        <use href="./img/sprite.svg#twitter"></use>
+                    </svg></a></li>
+
+
+        </ul>
+    </div>
+    <!-- <footer>
         <div class="FooterContainer">
             <ul class="list_svg">
                 <li>
@@ -75,8 +97,9 @@
                     </a>
                 </li>
             </ul>
+
         </div>
-    </footer>
+    </footer> -->
 </body>
 
 </html>
