--- a/index.html
+++ b/index.html
@@ -55,23 +55,25 @@
         <div class="hover_me_klik"><span>
                 HOVER ME </span>
         </div>
-        <ul class="hover_svg">
-            <li><a href="#"><svg class="icon_svg">
-                        <use href="./img/sprite.svg#instagram"></use>
-                    </svg></a></li>
-            <li><a href="#"><svg class="icon_svg">
-                        <use href="./img/sprite.svg#telegram"></use>
-                    </svg></a></li>
-            <li><a href="#"><svg class="icon_svg">
-                        <use href="./img/sprite.svg#facebook"></use>
-                    </svg></a></li>
-            <li><a href="#"><svg class="icon_svg">
+        <div class="back">
+            <ul class="hover_svg">
+                <li><a href="#"><svg class="icon_svg">
+                            <use href="./img/sprite.svg#instagram"></use>
+                        </svg></a></li>
+                <li><a href="#"><svg class="icon_svg">
+                            <use href="./img/sprite.svg#telegram"></use>
+                        </svg></a></li>
+                <li><a href="#"><svg class="icon_svg">
+                            <use href="./img/sprite.svg#facebook"></use>
+                        </svg></a></li>
+                <li><a href="#"><svg class="icon_svg">
 
-                        <use href="./img/sprite.svg#twitter"></use>
-                    </svg></a></li>
+                            <use href="./img/sprite.svg#twitter"></use>
+                        </svg></a></li>
 
 
-        </ul>
+            </ul>
+        </div>
     </div>
     <!-- <footer>
         <div class="FooterContainer">
