--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                 </li>
             </ul>
         </div>
-    </header>00
+    </header>
+
     </div>
     <div class="hover_me">
         <div class="hover_me_klik"><span>
